--- a/IconicYatraUI-main/index.html
+++ b/IconicYatraUI-main/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/jpg" href="/logoiconic.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Iconic Yatra</title>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
